--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -215,7 +215,7 @@ bindsym $mod+shift+s exec gksudo "shutdown -h now"
 # Audio Mixer
 bindsym $mod+shift+a exec $terminal -e 'alsamixer'
 
-focus_follows_mouse yes
+focus_follows_mouse no
 
 # make mod+p take a screenshot
 bindsym $mod+p exec scrot ~/screenshots/$(date +"%a-%d-%b-%k:%M:%S.jpg")
