--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -218,8 +218,8 @@ bindsym $mod+shift+a exec $terminal -e 'alsamixer'
 focus_follows_mouse no
 
 # make mod+p take a screenshot
-bindsym $mod+p exec scrot ~/screenshots/$(date +"%a-%d-%b-%k:%M:%S.jpg")
-bindsym $mod+shift+p exec scrot -s ~/screenshots/$(date +"%a-%d-%b-%k:%M:%S.jpg")
+bindsym $mod+p exec scrot ~/screenshots/$(date +"%a-%d-%b-%H:%M:%S.jpg")
+bindsym $mod+shift+p exec scrot -s ~/screenshots/$(date +"%a-%d-%b-%H:%M:%S.jpg")
 
 # autoexec
 
