Changed mouse hide button to mod+y, mod+shift+y unhides it

--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -218,11 +218,12 @@ bindsym $mod+shift+a exec $terminal -e 'alsamixer'
 focus_follows_mouse no
 
 # make mod+p take a screenshot
-bindsym $mod+p exec scrot ~/screenshots/$(date +"%a-%d-%b-%H:%M:%S.jpg")
+bindsym $mod+p       exec scrot ~/screenshots/$(date +"%a-%d-%b-%H:%M:%S.jpg")
 bindsym $mod+shift+p exec scrot -s ~/screenshots/$(date +"%a-%d-%b-%H:%M:%S.jpg")
 
 # make mod+b hide the cursor in the top right corner
-bindsym $mod+b exec xdotool mousemove 1920 0
+bindsym $mod+y       exec xdotool mousemove 1920 0
+bindsym $mod+shift+y exec xdotool mousemove 960 540
 
 # autoexec
 
