Removed some blocks

--- a/home/.config/i3/i3blocks.conf
+++ b/home/.config/i3/i3blocks.conf
@@ -60,10 +60,10 @@ interval=30
 # The directory defaults to $HOME if the instance is not specified.
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
-[disk]
-label=Disk
+#[disk]
+#label=Disk
 #instance=/mnt/data
-interval=30
+#interval=30
 
 # Network interface monitoring
 #
@@ -80,9 +80,9 @@ separator=true
 interval=10
 separator=false
 
-[bandwidth]
+#[bandwidth]
 #instance=eth0
-interval=5
+#interval=5
 
 # CPU usage
 #
