--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -1,14 +1,14 @@
 # i3 config file (v4)
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
-set $terminal urxvtc -fn 'xft:Ubuntu Mono derivative Powerline:pixelsize=15'
+set $terminal urxvtc -fn 'xft:Ubuntu Mono derivative Powerline:pixelsize=21'
 
 # Mod4 = OS-Key
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:System San Francisco Display 9
+font pango:System San Francisco Display 14
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -128,9 +128,6 @@ bindsym $mod+Shift+9 move container to workspace $wspace9
 bindsym $mod+Shift+0 move container to workspace $wspace10
 
 # assign programms to workspaces
-# assign [class="xterm"] $wspace1
-# assign [class="chromium"] $wspace2
-# assign [class="spotify"] $wspace6
 assign [class="Steam"] $wspace5
 
 
@@ -222,14 +219,13 @@ bindsym $mod+p       exec scrot ~/screenshots/$(date +"%a-%d-%b-%H:%M:%S.jpg")
 bindsym $mod+shift+p exec scrot -s ~/screenshots/$(date +"%a-%d-%b-%H:%M:%S.jpg")
 
 # make mod+b hide the cursor in the top right corner
-bindsym $mod+y       exec xdotool mousemove 1920 0
-bindsym $mod+shift+y exec xdotool mousemove 960 540
+bindsym $mod+y       exec xdotool mousemove 2560 0
+bindsym $mod+shift+y exec xdotool mousemove 1280 720
 
 # autoexec
 
 # set the wallpaper image
 exec_always feh --bg-scale /home/osiris/.wallpapers/wallpaper.png
 
-# fade between workspaces
-# CG to disable shadows
+exec --no-startup-id compton -b
 exec --no-startup-id dunst
