--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -147,16 +147,16 @@ mode "resize" {
     # Pressing up will shrink the window’s height.
     # Pressing down will grow the window’s height.
     # left: h # right: l # up: k # down: j
-    bindsym h resize shrink width 5 px or 5 ppt
-    bindsym j resize grow height 5 px or 5 ppt
-    bindsym k resize shrink height 5 px or 5 ppt
-    bindsym l resize grow width 5 px or 5 ppt
+    bindsym h resize shrink width 20 px or 20 ppt
+    bindsym j resize grow height 20 px or 20 ppt
+    bindsym k resize shrink height 20 px or 20 ppt
+    bindsym l resize grow width 20 px or 20 ppt
 
     # same bindings, but for the arrow keys
-    bindsym Left resize shrink width 5 px or 5 ppt
-    bindsym Down resize grow height 5 px or 5 ppt
-    bindsym Up resize shrink height 5 px or 5 ppt
-    bindsym Right resize grow width 5 px or 5 ppt
+    bindsym Left resize shrink width 20 px or 20 ppt
+    bindsym Down resize grow height 20 px or 20 ppt
+    bindsym Up resize shrink height 20 px or 20 ppt
+    bindsym Right resize grow width 20 px or 20 ppt
 
     # back to normal: Enter or Escape
     bindsym Return mode "default"
@@ -210,7 +210,7 @@ bindsym $mod+shift+x mode "default"; exec ~/.config/i3/scripts/lock.sh
 #bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%
 #bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5%
 #bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
-bindsym $mod+shift+s exec gksudo "shutdown -h now" 
+bindsym $mod+shift+s exec "shutdown -h now" 
 
 # Audio Controls
 bindsym $mod+shift+a exec $terminal -e 'alsamixer'
