--- a/home/.config/i3/i3blocks.conf
+++ b/home/.config/i3/i3blocks.conf
@@ -25,6 +25,11 @@ command=/usr/lib/i3blocks/$BLOCK_NAME
 separator_block_width=15
 markup=none
 
+# [mediaplayer]
+# instance=spotify
+# interval=5
+# signal=10
+
 [volume]
 label=♫
 instance=Master
@@ -58,9 +63,4 @@ command=~/.config/i3/scripts/battery-status.sh
 [time]
 command=date '+%d.%m.%Y %H:%M:%S'
 interval=1
-
-[mediaplayer]
-instance=spotify
-interval=5
-signal=10
 
