--- a/home/.config/i3/config
+++ b/home/.config/i3/config
@@ -204,7 +204,7 @@ bar {
 }
 
 # lock the screen
-bindsym $mod+shift+x mode "default"; exec ~/.config/i3/scripts/lock.sh
+bindsym $mod+shift+x mode "default"; exec ~/.config/i3/scripts/lock.sh screenshot pixelate lock
 
 # Shutdown
 #bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%
