--- a/home/.config/i3/i3blocks.conf
+++ b/home/.config/i3/i3blocks.conf
@@ -30,11 +30,18 @@ markup=none
 # interval=5
 # signal=10
 
+[keyindicator]
+interval=1
+
 [volume]
 label=♫
 instance=Master
 interval=once
 signal=10
+
+[cpu_usage]
+label=☢
+interval=10
 
 [memory]
 label=🐏
@@ -50,15 +57,16 @@ separator=true
 interval=10
 separator=false
 
-[cpu_usage]
-label=CPU
-interval=10
-min_width=CPU: 100.00%
-
 [battery_thinkpad]
 label=⚡
 interval=45
 command=~/.config/i3/scripts/battery-status.sh
+
+[display_brightness]
+label=☀
+interval=1
+separator=true
+command=light -G | cut -d . -f 1
 
 [time]
 command=date '+%d.%m.%Y %H:%M:%S'
