New RAM display and Backlight icon

--- a/home/.config/i3/i3blocks.conf
+++ b/home/.config/i3/i3blocks.conf
@@ -40,7 +40,7 @@ interval=once
 signal=10
 
 [display_brightness]
-label=☀
+label=☼
 interval=1
 separator=true
 command=light -G | cut -d . -f 1
@@ -49,10 +49,11 @@ command=light -G | cut -d . -f 1
 label=☢
 interval=10
 
-[memory]
+[ram]
 label=🐏
 separator=true
-interval=30
+interval=10
+command=free | awk 'FNR == 2 { printf "%.1fG", $3/1024/1024 }'
 
 [battery_thinkpad]
 label=⚡
