changed RAM icon

--- a/home/.config/i3/i3blocks.conf
+++ b/home/.config/i3/i3blocks.conf
@@ -50,7 +50,7 @@ label=☢
 interval=10
 
 [ram]
-label=🐏
+label=☷
 separator=true
 interval=10
 command=free | awk 'FNR == 2 { printf "%.1fG", $3/1024/1024 }'
