--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -218,7 +218,7 @@ bindsym XF86MonBrightnessDown exec light -U 10
 focus_follows_mouse no
 
 # make mod+p take a screenshot
-bindsym $mod+p       exec "scrot ~/screenshots/%a-%d-%b-%H:%M:%S.jpg; notify-send -t 500 'Screenshot saved' $(date +'%a-%d-%b-%H:%M:%S.jpg')"
+bindsym $mod+p exec "scrot --quality 100 ~/screenshots/%a-%d-%b-%H:%M:%S.jpg; notify-send -t 500 'Screenshot saved' $(date +'%a-%d-%b-%H:%M:%S.jpg')"
 
 # make mod+b hide the cursor in the top right corner
 bindsym $mod+shift+y       exec xdotool mousemove 2560 0
