--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -1,9 +1,7 @@
-# i3 config file (v4)
-#
-# Please see http://i3wm.org/docs/userguide.html for a complete reference!
-set $terminal urxvtc -fn 'xft:Ubuntu Mono derivative Powerline:pixelsize=21'
 
-# Mod4 = OS-Key
+# Variables
+# #########
+set $terminal urxvtc -fn 'xft:Ubuntu Mono derivative Powerline:pixelsize=21'
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -13,60 +11,58 @@ font pango:System San Francisco Display 14
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-# start a terminal
+# Start a terminal
 bindsym $mod+Return exec $terminal
-bindsym $mod+Shift+Return exec chromium
+bindsym $mod+shift+Return exec chromium
 
-# kill focused window
-bindsym $mod+Shift+q kill
+# Kill focused window
+bindsym $mod+shift+q kill
 
-# start rofi (a program launcher)
-#bindsym $mod+d exec rofi -show run -lines 6 -eh 1 -width 500 -padding 50 -opacity "95" -bw 5 -bc "#808080" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#808080" -font "System San Francisco Display 18" -separator-style "solid" -hide-scrollbar
+# Start rofi (a program launcher)
 bindsym $mod+d exec rofi -show run
 
-#border on, see where focus is
+# See where focus is
 bindsym $mod+semicolon exec i3-msg border pixel 1
 bindsym --release $mod+semicolon exec i3-msg border pixel 0
-# change focus
-bindsym $mod+h exec i3-msg border pixel 1; focus left
-bindsym $mod+j exec i3-msg border pixel 1; focus down
-bindsym $mod+k exec i3-msg border pixel 1; focus up
-bindsym $mod+l exec i3-msg border pixel 1; focus right
+# Focus
+# #####
+bindsym $mod+h           exec i3-msg border pixel 1; focus left
+bindsym $mod+j           exec i3-msg border pixel 1; focus down
+bindsym $mod+k           exec i3-msg border pixel 1; focus up
+bindsym $mod+l           exec i3-msg border pixel 1; focus right
 bindsym --release $mod+h exec i3-msg border pixel 0
 bindsym --release $mod+j exec i3-msg border pixel 0
 bindsym --release $mod+k exec i3-msg border pixel 0
 bindsym --release $mod+l exec i3-msg border pixel 0
-
-# move focused window
-bindsym $mod+Shift+h exec i3-msg border pixel 1; move left
-bindsym $mod+Shift+j exec i3-msg border pixel 1; move down
-bindsym $mod+Shift+k exec i3-msg border pixel 1; move up
-bindsym $mod+Shift+l exec i3-msg border pixel 1; move right
-bindsym --release $mod+Shift+h exec i3-msg border pixel 0
-bindsym --release $mod+Shift+j exec i3-msg border pixel 0
-bindsym --release $mod+Shift+k exec i3-msg border pixel 0
-bindsym --release $mod+Shift+l exec i3-msg border pixel 0
-
 # Cursor Keys
-# change focus
-bindsym $mod+Left exec i3-msg border pixel 1; focus left
-bindsym $mod+Down exec i3-msg border pixel 1; focus down
-bindsym $mod+Up exec i3-msg border pixel 1; focus up
-bindsym $mod+Right exec i3-msg border pixel 1; focus right
-bindsym --release $mod+Left exec i3-msg border pixel 0
-bindsym --release $mod+Down exec i3-msg border pixel 0
-bindsym --release $mod+Up exec i3-msg border pixel 0
+bindsym $mod+Left            exec i3-msg border pixel 1; focus left
+bindsym $mod+Down            exec i3-msg border pixel 1; focus down
+bindsym $mod+Up              exec i3-msg border pixel 1; focus up
+bindsym $mod+Right           exec i3-msg border pixel 1; focus right
+bindsym --release $mod+Left  exec i3-msg border pixel 0
+bindsym --release $mod+Down  exec i3-msg border pixel 0
+bindsym --release $mod+Up    exec i3-msg border pixel 0
 bindsym --release $mod+Right exec i3-msg border pixel 0
 
-# move focused window
-bindsym $mod+Shift+Left exec i3-msg border pixel 1; move left
-bindsym $mod+Shift+Down exec i3-msg border pixel 1; move down
-bindsym $mod+Shift+Up exec i3-msg border pixel 1; move up
-bindsym $mod+Shift+Right exec i3-msg border pixel 1; move right
-bindsym --release $mod+Shift+Left exec i3-msg border pixel 0
-bindsym --release $mod+Shift+Down exec i3-msg border pixel 0
-bindsym --release $mod+Shift+Up exec i3-msg border pixel 0
-bindsym --release $mod+Shift+Right exec i3-msg border pixel 0
+# Move focused window
+# ###################
+bindsym $mod+shift+h           exec i3-msg border pixel 1; move left
+bindsym $mod+shift+j           exec i3-msg border pixel 1; move down
+bindsym $mod+shift+k           exec i3-msg border pixel 1; move up
+bindsym $mod+shift+l           exec i3-msg border pixel 1; move right
+bindsym --release $mod+shift+h exec i3-msg border pixel 0
+bindsym --release $mod+shift+j exec i3-msg border pixel 0
+bindsym --release $mod+shift+k exec i3-msg border pixel 0
+bindsym --release $mod+shift+l exec i3-msg border pixel 0
+# Cursor Keys
+bindsym $mod+shift+Left            exec i3-msg border pixel 1; move left
+bindsym $mod+shift+Down            exec i3-msg border pixel 1; move down
+bindsym $mod+shift+Up              exec i3-msg border pixel 1; move up
+bindsym $mod+shift+Right           exec i3-msg border pixel 1; move right
+bindsym --release $mod+shift+Left  exec i3-msg border pixel 0
+bindsym --release $mod+shift+Down  exec i3-msg border pixel 0
+bindsym --release $mod+shift+Up    exec i3-msg border pixel 0
+bindsym --release $mod+shift+Right exec i3-msg border pixel 0
 
 # split in horizontal orientation
 bindsym $mod+g split h
@@ -83,7 +79,7 @@ bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+bindsym $mod+shift+space floating toggle
 
 # change focus between tiling / floating windows
 bindsym $mod+space focus mode_toggle
@@ -116,45 +112,35 @@ bindsym $mod+9 workspace $wspace9
 bindsym $mod+0 workspace $wspace10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace $wspace1
-bindsym $mod+Shift+2 move container to workspace $wspace2
-bindsym $mod+Shift+3 move container to workspace $wspace3
-bindsym $mod+Shift+4 move container to workspace $wspace4
-bindsym $mod+Shift+5 move container to workspace $wspace5
-bindsym $mod+Shift+6 move container to workspace $wspace6
-bindsym $mod+Shift+7 move container to workspace $wspace7
-bindsym $mod+Shift+8 move container to workspace $wspace8
-bindsym $mod+Shift+9 move container to workspace $wspace9
-bindsym $mod+Shift+0 move container to workspace $wspace10
+bindsym $mod+shift+1 move container to workspace $wspace1
+bindsym $mod+shift+2 move container to workspace $wspace2
+bindsym $mod+shift+3 move container to workspace $wspace3
+bindsym $mod+shift+4 move container to workspace $wspace4
+bindsym $mod+shift+5 move container to workspace $wspace5
+bindsym $mod+shift+6 move container to workspace $wspace6
+bindsym $mod+shift+7 move container to workspace $wspace7
+bindsym $mod+shift+8 move container to workspace $wspace8
+bindsym $mod+shift+9 move container to workspace $wspace9
+bindsym $mod+shift+0 move container to workspace $wspace10
 
 # reload the configuration file
-bindsym $mod+Shift+c reload
+bindsym $mod+shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
+bindsym $mod+shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Ragequit?' -b 'rq' 'i3-msg exit'"
+bindsym $mod+shift+e exec "i3-nagbar -t warning -m 'QUIT i3wm?' -b 'quit' 'i3-msg exit'"
 
-# resize window (you can also use the mouse for that)
 mode "resize" {
-    # These bindings trigger as soon as you enter the resize mode
+    bindsym h     resize shrink width  20 px or 20 ppt
+    bindsym j     resize grow   height 20 px or 20 ppt
+    bindsym k     resize shrink height 20 px or 20 ppt
+    bindsym l     resize grow   width  20 px or 20 ppt
 
-    # Pressing left will shrink the window’s width.
-    # Pressing right will grow the window’s width.
-    # Pressing up will shrink the window’s height.
-    # Pressing down will grow the window’s height.
-    # left: h # right: l # up: k # down: j
-    bindsym h resize shrink width 20 px or 20 ppt
-    bindsym j resize grow height 20 px or 20 ppt
-    bindsym k resize shrink height 20 px or 20 ppt
-    bindsym l resize grow width 20 px or 20 ppt
+    bindsym Left  resize shrink width  20 px or 20 ppt
+    bindsym Down  resize grow   height 20 px or 20 ppt
+    bindsym Up    resize shrink height 20 px or 20 ppt
+    bindsym Right resize grow   width  20 px or 20 ppt
 
-    # same bindings, but for the arrow keys
-    bindsym Left resize shrink width 20 px or 20 ppt
-    bindsym Down resize grow height 20 px or 20 ppt
-    bindsym Up resize shrink height 20 px or 20 ppt
-    bindsym Right resize grow width 20 px or 20 ppt
-
-    # back to normal: Enter or Escape
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
@@ -199,16 +185,10 @@ bar {
     }
 }
 
-# lock the screen
 bindsym $mod+shift+x mode "default"; exec ~/.config/i3/scripts/lock.sh screenshot pixelate lock
 
-# Shutdown
-#bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%
-#bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5%
-#bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
-bindsym $mod+shift+s exec "shutdown -h now" 
-
-# Audio Controls
+bindsym $mod+shift+s exec "i3-nagbar -t warning -m 'Ragequit?' -b 'rq' 'shutdown -h now'"
+bindsym $mod+q       exec 'thunar'
 bindsym $mod+shift+a exec $terminal -e 'alsamixer'
 
 # Brightnes/Light Controls
@@ -217,23 +197,18 @@ bindsym XF86MonBrightnessDown exec light -U 10
 
 focus_follows_mouse no
 
-# make mod+p take a screenshot
+# Screenshot
 bindsym $mod+p exec "scrot --quality 100 ~/screenshots/%a-%d-%b-%H:%M:%S.jpg; notify-send -t 500 'Screenshot saved' $(date +'%a-%d-%b-%H:%M:%S.jpg')"
 
-# make mod+b hide the cursor in the top right corner
-bindsym $mod+shift+y       exec xdotool mousemove 2560 0
-bindsym $mod+y exec xdotool mousemove 1280 720
+# Hide the cursor in the top right corner
+bindsym $mod+shift+y exec xdotool mousemove 2560 0
+bindsym $mod+y       exec xdotool mousemove 1280 720
 
-# open file manager
-bindsym $mod+q exec $terminal -e 'vifm'
+# Autoexec
+###########
 
-# autoexec
-
-# set the wallpaper image
 exec_always feh --bg-scale "$HOME/.wallpapers/wallpaper.png"
-
 exec --no-startup-id compton -b
 exec --no-startup-id dunst
-
 exec --no-startup-id nm-applet
 
