Big i3 config rework

--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -1,163 +1,50 @@
+#      ___                      _
+#  o  /   \                    | | o
+#       __/   __   __   _  _   | |     __,
+#  |      \  /    /  \_/ |/ |  |/  |  /  |
+#  |_/\___/  \___/\__/   |  |_/|__/|_/\_/|/
+#                              |\       /|
+#  fancy af edition            |/       \|
 
+##---------
 # Variables
-# #########
+##---------
+
 set $terminal urxvtc -fn 'xft:Ubuntu Mono derivative Powerline:pixelsize=21'
-set $mod Mod4
+set $browser  chromium
+set $mod      Mod4
 
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
-font pango:System San Francisco Display 14
-
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
-
-# Start a terminal
-bindsym $mod+Return exec $terminal
-bindsym $mod+shift+Return exec chromium
-
-# Kill focused window
-bindsym $mod+shift+q kill
-
-# Start rofi (a program launcher)
-bindsym $mod+d exec rofi -show run
-
-# See where focus is
-bindsym $mod+semicolon exec i3-msg border pixel 1
-bindsym --release $mod+semicolon exec i3-msg border pixel 0
-# Focus
-# #####
-bindsym $mod+h           exec i3-msg border pixel 1; focus left
-bindsym $mod+j           exec i3-msg border pixel 1; focus down
-bindsym $mod+k           exec i3-msg border pixel 1; focus up
-bindsym $mod+l           exec i3-msg border pixel 1; focus right
-bindsym --release $mod+h exec i3-msg border pixel 0
-bindsym --release $mod+j exec i3-msg border pixel 0
-bindsym --release $mod+k exec i3-msg border pixel 0
-bindsym --release $mod+l exec i3-msg border pixel 0
-# Cursor Keys
-bindsym $mod+Left            exec i3-msg border pixel 1; focus left
-bindsym $mod+Down            exec i3-msg border pixel 1; focus down
-bindsym $mod+Up              exec i3-msg border pixel 1; focus up
-bindsym $mod+Right           exec i3-msg border pixel 1; focus right
-bindsym --release $mod+Left  exec i3-msg border pixel 0
-bindsym --release $mod+Down  exec i3-msg border pixel 0
-bindsym --release $mod+Up    exec i3-msg border pixel 0
-bindsym --release $mod+Right exec i3-msg border pixel 0
-
-# Move focused window
-# ###################
-bindsym $mod+shift+h           exec i3-msg border pixel 1; move left
-bindsym $mod+shift+j           exec i3-msg border pixel 1; move down
-bindsym $mod+shift+k           exec i3-msg border pixel 1; move up
-bindsym $mod+shift+l           exec i3-msg border pixel 1; move right
-bindsym --release $mod+shift+h exec i3-msg border pixel 0
-bindsym --release $mod+shift+j exec i3-msg border pixel 0
-bindsym --release $mod+shift+k exec i3-msg border pixel 0
-bindsym --release $mod+shift+l exec i3-msg border pixel 0
-# Cursor Keys
-bindsym $mod+shift+Left            exec i3-msg border pixel 1; move left
-bindsym $mod+shift+Down            exec i3-msg border pixel 1; move down
-bindsym $mod+shift+Up              exec i3-msg border pixel 1; move up
-bindsym $mod+shift+Right           exec i3-msg border pixel 1; move right
-bindsym --release $mod+shift+Left  exec i3-msg border pixel 0
-bindsym --release $mod+shift+Down  exec i3-msg border pixel 0
-bindsym --release $mod+shift+Up    exec i3-msg border pixel 0
-bindsym --release $mod+shift+Right exec i3-msg border pixel 0
-
-# split in horizontal orientation
-bindsym $mod+g split h
-
-# split in vertical orientation
-bindsym $mod+v split v
-
-# enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
-
-# change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
-
-# toggle tiling / floating
-bindsym $mod+shift+space floating toggle
-
-# change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
-
-# focus the parent container
-bindsym $mod+a focus parent
-
-# workspace names
-set $wspace1 "1:Ⅰ"
-set $wspace2 "2:Ⅱ"
-set $wspace3 "3:Ⅲ"
-set $wspace4 "4:Ⅳ"
-set $wspace5 "5:Ⅴ"
-set $wspace6 "6:Ⅵ"
-set $wspace7 "7:Ⅶ"
-set $wspace8 "8:Ⅷ"
-set $wspace9 "9:Ⅸ"
+# Workspaces
+set $wspace1  "1:Ⅰ"
+set $wspace2  "2:Ⅱ"
+set $wspace3  "3:Ⅲ"
+set $wspace4  "4:Ⅳ"
+set $wspace5  "5:Ⅴ"
+set $wspace6  "6:Ⅵ"
+set $wspace7  "7:Ⅶ"
+set $wspace8  "8:Ⅷ"
+set $wspace9  "9:Ⅸ"
 set $wspace10 "10:Ⅹ"
 
-# switch to workspace
-bindsym $mod+1 workspace $wspace1
-bindsym $mod+2 workspace $wspace2
-bindsym $mod+3 workspace $wspace3
-bindsym $mod+4 workspace $wspace4
-bindsym $mod+5 workspace $wspace5
-bindsym $mod+6 workspace $wspace6
-bindsym $mod+7 workspace $wspace7
-bindsym $mod+8 workspace $wspace8
-bindsym $mod+9 workspace $wspace9
-bindsym $mod+0 workspace $wspace10
-
-# move focused container to workspace
-bindsym $mod+shift+1 move container to workspace $wspace1
-bindsym $mod+shift+2 move container to workspace $wspace2
-bindsym $mod+shift+3 move container to workspace $wspace3
-bindsym $mod+shift+4 move container to workspace $wspace4
-bindsym $mod+shift+5 move container to workspace $wspace5
-bindsym $mod+shift+6 move container to workspace $wspace6
-bindsym $mod+shift+7 move container to workspace $wspace7
-bindsym $mod+shift+8 move container to workspace $wspace8
-bindsym $mod+shift+9 move container to workspace $wspace9
-bindsym $mod+shift+0 move container to workspace $wspace10
-
-# reload the configuration file
-bindsym $mod+shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+shift+e exec "i3-nagbar -t warning -m 'QUIT i3wm?' -b 'quit' 'i3-msg exit'"
-
-mode "resize" {
-    bindsym h     resize shrink width  20 px or 20 ppt
-    bindsym j     resize grow   height 20 px or 20 ppt
-    bindsym k     resize shrink height 20 px or 20 ppt
-    bindsym l     resize grow   width  20 px or 20 ppt
-
-    bindsym Left  resize shrink width  20 px or 20 ppt
-    bindsym Down  resize grow   height 20 px or 20 ppt
-    bindsym Up    resize shrink height 20 px or 20 ppt
-    bindsym Right resize grow   width  20 px or 20 ppt
-
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
-}
-
-bindsym $mod+r mode "resize"
-
-new_window none
-
 # Colors
-set $black             #272822
-set $white             #FFFFFF
-set $pink              #F92672
-set $blue              #66D9EF
-set $green             #A6E22E
-set $orange            #FD971F
-set $yellow            #E6DB74
-set $purple            #AE81FF
+set $black  #272822
+set $white  #FFFFFF
+set $pink   #F92672
+set $blue   #66D9EF
+set $green  #A6E22E
+set $orange #FD971F
+set $yellow #E6DB74
+set $purple #AE81FF
+
+##--------------
+# Other Settings
+##--------------
+
+floating_modifier       $mod
+focus_follows_mouse     no
+new_window              none
+hide_edge_borders       both
+font                    pango:System San Francisco Display 14
 
 # class                 border  bg.    text    indicator child_border
 client.focused          $black  $black $green  $blue     $blue
@@ -166,8 +53,23 @@ client.unfocused        $black  $black $white  $black    $black
 
 client.background       #ff0000
 
-# disables indicator where next window will be placed
-hide_edge_borders both
+##---------------
+# Special Windows
+##---------------
+
+for_window [instance="dropdown"] floating enable
+for_window [instance="dropdown"] resize set 1300 800
+for_window [instance="dropdown"] move scratchpad
+exec --no-startup-id $terminal -name dropdown
+
+for_window [instance="sound"] floating enable
+for_window [instance="sound"] resize set 600 800
+for_window [instance="sound"] move scratchpad
+exec --no-startup-id $terminal -name sound -e alsamixer
+
+##---
+# Bar
+##---
 
 bar {
     position top
@@ -185,37 +87,103 @@ bar {
     }
 }
 
-bindsym $mod+shift+x mode "default"; exec ~/.config/i3/scripts/lock.sh screenshot pixelate lock
+##----
+# Keys
+##----
 
-bindsym $mod+shift+s exec "i3-nagbar -t warning -m 'Ragequit?' -b 'rq' 'shutdown -h now'"
-bindsym $mod+q       exec 'thunar'
-bindsym $mod+shift+a exec $terminal -e 'alsamixer'
+# Meta
+bindsym $mod+shift+c               reload
+bindsym $mod+shift+r               restart
+bindsym $mod+x                     mode "default"; exec ~/.config/i3/scripts/lock.sh screenshot pixelate lock
 
-# Dropdown terminal
-for_window [instance="dropdown"] floating enable
-for_window [instance="dropdown"] resize set 1300 800
-for_window [instance="dropdown"] move scratchpad
-for_window [instance="dropdown"] border pixel 5
-exec --no-startup-id $terminal -name dropdown
-bindsym $mod+u       [instance="dropdown"] scratchpad show; [instance="dropdown"] move position center
+# Programs
+bindsym $mod+space                 exec $terminal
+bindsym $mod+shift+space           exec $browser
+bindsym $mod+d                     exec rofi -show run
+bindsym $mod+a                     [instance="sound"] scratchpad show; [instance="sound"] move position center
+bindsym $mod+u                     [instance="dropdown"] scratchpad show; [instance="dropdown"] move position center
 
-# Brightnes/Light Controls
-bindsym XF86MonBrightnessUp   exec light -A 10
-bindsym XF86MonBrightnessDown exec light -U 10
+# Special keys
+bindsym XF86MonBrightnessUp        exec light -A 10
+bindsym XF86MonBrightnessDown      exec light -U 10
 
-focus_follows_mouse no
+# Window manipulation
+bindsym $mod+shift+q               kill
+bindsym $mod+Return                focus mode_toggle
+bindsym $mod+shift+Return          floating toggle
+bindsym $mod+semicolon             exec i3-msg border pixel 1
+bindsym --release $mod+semicolon   exec i3-msg border pixel 0
 
-# Screenshot
-bindsym $mod+p exec "scrot --quality 100 ~/screenshots/%a-%d-%b-%H:%M:%S.jpg; notify-send -t 500 'Screenshot saved' $(date +'%a-%d-%b-%H:%M:%S.jpg')"
+# Layout
+bindsym $mod+g                     split h
+bindsym $mod+v                     split v
+bindsym $mod+f                     fullscreen toggle
+bindsym $mod+e                     layout toggle split
+bindsym $mod+s                     layout stacking
+bindsym $mod+w                     layout tabbed
 
-# Hide the cursor in the top right corner
-bindsym $mod+shift+y exec xdotool mousemove 2560 0
-bindsym $mod+y       exec xdotool mousemove 1280 720
+bindsym $mod+p                     exec "scrot --quality 100 ~/screenshots/%a-%d-%b-%H:%M:%S.jpg; notify-send -t 500 'Screenshot saved' $(date +'%a-%d-%b-%H:%M:%S.jpg')"
+bindsym $mod+shift+s               exec "bash ~/.config/i3/scripts/shutdown.sh"
 
-# Autoexec
-###########
+# Window Resize
+bindsym $mod+Left                  resize shrink width  20 px or 20 ppt
+bindsym $mod+Right                 resize grow   height 20 px or 20 ppt
+bindsym $mod+Down                  resize grow   width  20 px or 20 ppt
+bindsym $mod+Up                    resize shrink height 20 px or 20 ppt
+
+bindsym $mod+shift+Right           resize grow   height  5 px or  5 ppt
+bindsym $mod+shift+Left            resize shrink width   5 px or  5 ppt
+bindsym $mod+shift+Down            resize grow   width   5 px or  5 ppt
+bindsym $mod+shift+Up              resize shrink height  5 px or  5 ppt
+
+# Window movement
+bindsym $mod+h                     exec i3-msg border pixel 1; focus left
+bindsym $mod+j                     exec i3-msg border pixel 1; focus down
+bindsym $mod+k                     exec i3-msg border pixel 1; focus up
+bindsym $mod+l                     exec i3-msg border pixel 1; focus right
+bindsym --release $mod+h           exec i3-msg border pixel 0
+bindsym --release $mod+j           exec i3-msg border pixel 0
+bindsym --release $mod+k           exec i3-msg border pixel 0
+bindsym --release $mod+l           exec i3-msg border pixel 0
+
+bindsym $mod+shift+h               exec i3-msg border pixel 1; move left
+bindsym $mod+shift+j               exec i3-msg border pixel 1; move down
+bindsym $mod+shift+k               exec i3-msg border pixel 1; move up
+bindsym $mod+shift+l               exec i3-msg border pixel 1; move right
+bindsym --release $mod+shift+h     exec i3-msg border pixel 0
+bindsym --release $mod+shift+j     exec i3-msg border pixel 0
+bindsym --release $mod+shift+k     exec i3-msg border pixel 0
+bindsym --release $mod+shift+l     exec i3-msg border pixel 0
+
+# Workspaces
+bindsym $mod+1                     workspace $wspace1
+bindsym $mod+2                     workspace $wspace2
+bindsym $mod+3                     workspace $wspace3
+bindsym $mod+4                     workspace $wspace4
+bindsym $mod+5                     workspace $wspace5
+bindsym $mod+6                     workspace $wspace6
+bindsym $mod+7                     workspace $wspace7
+bindsym $mod+8                     workspace $wspace8
+bindsym $mod+9                     workspace $wspace9
+bindsym $mod+0                     workspace $wspace10
+
+bindsym $mod+shift+1               move container to workspace $wspace1
+bindsym $mod+shift+2               move container to workspace $wspace2
+bindsym $mod+shift+3               move container to workspace $wspace3
+bindsym $mod+shift+4               move container to workspace $wspace4
+bindsym $mod+shift+5               move container to workspace $wspace5
+bindsym $mod+shift+6               move container to workspace $wspace6
+bindsym $mod+shift+7               move container to workspace $wspace7
+bindsym $mod+shift+8               move container to workspace $wspace8
+bindsym $mod+shift+9               move container to workspace $wspace9
+bindsym $mod+shift+0               move container to workspace $wspace10
+
+##------------------
+# Autostart programs
+##------------------
 
 exec_always feh --bg-scale "$HOME/.wallpapers/wallpaper.png"
+
 exec --no-startup-id compton -b
 exec --no-startup-id dunst
 exec --no-startup-id nm-applet
