Changed key mappings

--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -57,15 +57,26 @@ client.background       #ff0000
 # SPECIAL WINDOWS
 ##---------------
 
-for_window [instance="dropdown"] floating enable
-for_window [instance="dropdown"] resize set 1300 800
-for_window [instance="dropdown"] move scratchpad
-exec --no-startup-id $terminal -name dropdown
+# Dropdown windows
+for_window [instance="shdropdown"] floating enable
+for_window [instance="shdropdown"] resize set 1300 800
+for_window [instance="shdropdown"] move scratchpad
+exec --no-startup-id $terminal -name shdropdown
+
+for_window [instance="pydropdown"] floating enable
+for_window [instance="pydropdown"] resize set 1300 800
+for_window [instance="pydropdown"] move scratchpad
+exec --no-startup-id $terminal -name pydropdown -e python3
 
 for_window [instance="sound"] floating enable
 for_window [instance="sound"] resize set 600 800
 for_window [instance="sound"] move scratchpad
 exec --no-startup-id $terminal -name sound -e alsamixer
+
+# Assign specifig windows
+assign [class="Gimp"] Gimp
+assign [class="Audacity"] Audacity
+set $customws 'Gimp,Audacity'
 
 ##---
 # BAR
@@ -94,47 +105,47 @@ bar {
 # Meta
 bindsym $mod+shift+c               reload
 bindsym $mod+shift+r               restart
-bindsym $mod+x                     mode "default"; exec ~/.config/i3/scripts/lock.sh screenshot pixelate lock
+bindsym $mod+x                     mode "default"; exec "~/.config/i3/scripts/lock.sh screenshot pixelate lock"
 
 # Programs
-bindsym $mod+space                 exec $terminal
-bindsym $mod+shift+space           exec $browser
-bindsym $mod+d                     exec rofi -show run
-bindsym $mod+a                     [instance="sound"] scratchpad show; [instance="sound"] move position center
-bindsym $mod+u                     [instance="dropdown"] scratchpad show; [instance="dropdown"] move position center
+bindsym $mod+d                     exec $terminal
+bindsym $mod+shift+d               exec $browser
+bindsym $mod+space                 exec "rofi -show run"
+bindsym $mod+p                     exec "scrot --quality 100 ~/screenshots/%a-%d-%b-%H:%M:%S.jpg; notify-send -t 500 'Screenshot saved' $(date +'%a-%d-%b-%H:%M:%S.jpg')"
+bindsym $mod+shift+s               exec "bash ~/.config/i3/scripts/shutdown.sh"
+bindsym $mod+u                     [instance="sound"]      scratchpad show; [instance="sound"] move position center
+bindsym $mod+i                     [instance="shdropdown"] scratchpad show; [instance="shdropdown"] move position center
+bindsym $mod+o                     [instance="pydropdown"] scratchpad show; [instance="pydropdown"] move position center
 
 # Special keys
-bindsym XF86MonBrightnessUp        exec light -A 10
-bindsym XF86MonBrightnessDown      exec light -U 10
+bindsym XF86MonBrightnessUp        exec "light -A 10"
+bindsym XF86MonBrightnessDown      exec "light -U 10"
 
 # Window manipulation
 bindsym $mod+shift+q               kill
-bindsym $mod+Return                focus mode_toggle
-bindsym $mod+shift+Return          floating toggle
-bindsym $mod+semicolon             exec i3-msg border pixel 1
-bindsym --release $mod+semicolon   exec i3-msg border pixel 0
-
-# Layout
 bindsym $mod+g                     split h
 bindsym $mod+v                     split v
-bindsym $mod+f                     fullscreen toggle
-bindsym $mod+e                     layout toggle split
-bindsym $mod+s                     layout stacking
-bindsym $mod+w                     layout tabbed
+bindsym $mod+Return                focus mode_toggle
+bindsym $mod+shift+Return          floating toggle
+bindsym $mod+semicolon             exec "i3-msg border pixel 1"
+bindsym --release $mod+semicolon   exec "i3-msg border pixel 0"
 
-bindsym $mod+p                     exec "scrot --quality 100 ~/screenshots/%a-%d-%b-%H:%M:%S.jpg; notify-send -t 500 'Screenshot saved' $(date +'%a-%d-%b-%H:%M:%S.jpg')"
-bindsym $mod+shift+s               exec "bash ~/.config/i3/scripts/shutdown.sh"
+# Layout
+bindsym $mod+f                     fullscreen toggle
+bindsym $mod+q                     layout toggle split
+bindsym $mod+w                     layout tabbed
+bindsym $mod+e                     layout stacking
 
 # Window Resize
-bindsym $mod+Left                  resize shrink width  10 px or 10 ppt
-bindsym $mod+Down                  resize grow   height 10 px or 10 ppt
-bindsym $mod+Up                    resize shrink height 10 px or 10 ppt
-bindsym $mod+Right                 resize grow   width  10 px or 10 ppt
+bindsym $mod+Left                  resize shrink width  5 px or 5 ppt
+bindsym $mod+Down                  resize grow   height 5 px or 5 ppt
+bindsym $mod+Up                    resize shrink height 5 px or 5 ppt
+bindsym $mod+Right                 resize grow   width  5 px or 5 ppt
 
-bindsym $mod+shift+Left            resize shrink width   5 px or  5 ppt
-bindsym $mod+shift+Down            resize grow   height  5 px or  5 ppt
-bindsym $mod+shift+Up              resize shrink height  5 px or  5 ppt
-bindsym $mod+shift+Right           resize grow   width   5 px or  5 ppt
+bindsym $mod+shift+Left            resize shrink width   1 px or  1 ppt
+bindsym $mod+shift+Down            resize grow   height  1 px or  1 ppt
+bindsym $mod+shift+Up              resize shrink height  1 px or  1 ppt
+bindsym $mod+shift+Right           resize grow   width   1 px or  1 ppt
 
 # Window movement
 bindsym $mod+h                     exec i3-msg border pixel 1; focus left
@@ -156,6 +167,8 @@ bindsym --release $mod+shift+k     exec i3-msg border pixel 0
 bindsym --release $mod+shift+l     exec i3-msg border pixel 0
 
 # Workspaces
+bindsym $mod+s                     exec "bash ~/.config/i3/scripts/wschange.sh $customws"
+
 bindsym $mod+1                     workspace $wspace1
 bindsym $mod+2                     workspace $wspace2
 bindsym $mod+3                     workspace $wspace3
