Changed i3blicks spacing and changed time to a sensible format

--- a/home/config/i3/i3blocks.conf
+++ b/home/config/i3/i3blocks.conf
@@ -2,7 +2,7 @@
 
 # Global properties
 command=/usr/lib/i3blocks/$BLOCK_NAME
-separator_block_width=15
+separator_block_width=20
 markup=none
 
 [volume]
@@ -42,6 +42,6 @@ interval=10
 separator=false
 
 [time]
-command=date '+%Y-%m.%d %H:%M:%S'
+command=date '+%Y-%m-%d %H:%M:%S'
 interval=1
 
