tmp fix: i3 tray on eDP1 instead of primary

--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -89,7 +89,8 @@ set $customws 'VirtualBox,Gimp,Audacity'
 
 bar {
     position top
-    tray_output primary
+    #tray_output primary
+    tray_output eDP-1
     status_command i3blocks -c ~/.config/i3/i3blocks.conf
     strip_workspace_numbers yes
     colors {
