--- a/home/config/i3/config
+++ b/home/config/i3/config
@@ -89,8 +89,7 @@ set $customws 'VirtualBox,Gimp,Audacity'
 
 bar {
     position top
-    #tray_output primary
-    tray_output eDP-1
+    tray_output primary
     status_command i3blocks -c ~/.config/i3/i3blocks.conf
     strip_workspace_numbers yes
     colors {
