Added sshd i3block

--- a/home/config/i3/i3blocks.conf
+++ b/home/config/i3/i3blocks.conf
@@ -5,6 +5,12 @@ command=/usr/lib/i3blocks/$BLOCK_NAME
 separator_block_width=20
 markup=none
 
+[sshd]
+label=☣
+interval=1
+separator=true
+command=~/.config/i3/scripts/sshd-status.sh
+
 [volume]
 label=♫
 instance=Master
