--- a/home/config/i3/i3blocks.conf
+++ b/home/config/i3/i3blocks.conf
@@ -14,14 +14,13 @@ command=~/.config/i3/scripts/sshd-status.sh
 [volume]
 label=♫
 instance=Master
-interval=5
+interval=1
 signal=10
 
-[display_brightness]
-label=☼
-interval=5
+[brightness]
+interval=1
 separator=true
-command=light -G | cut -d . -f 1
+command=~/.config/i3/scripts/brightness.sh
 
 [cpu_usage]
 label=☢
@@ -39,12 +38,12 @@ interval=45
 command=~/.config/i3/scripts/battery-status.sh
 
 [iface]
-color=#00FF00
-interval=10
+color=#a6e22e
+interval=5
 separator=true
 
 [wifi]
-interval=10
+interval=5
 separator=false
 
 [time]
